@@ -7,4 +7,6 @@ import org.fenixedu.academic.domain.student.Registration;
 public interface CgdIESCodeProviderStrategyClass {
 
     public Set<String> getIESCode(Registration registration);
+
+    public boolean requiresUnits();
 }
