@@ -1,3 +1,5 @@
+- Improvement: Adds requiresUnits for CgdIESCodeProviderStrategy 
+
 2.8.1 (01-08-2023)
 - Bug fix: Correctly adding client data when calling form43sender
 
